--- a/config/zilpzalp.conf
+++ b/config/zilpzalp.conf
@@ -1,23 +1,4 @@
-# =========================================================
-# ZMK / Zephyr config (macOS + iPadOS BLE stability)
-# =========================================================
+# common config (USB + BLE)
 
-# --- Device basics ---
-CONFIG_ZMK_USB=y
-CONFIG_ZMK_BLE=y
-CONFIG_BT=y
-CONFIG_BT_PERIPHERAL=y
-
-# Ime uređaja (kako se vidi u BT listi)
-CONFIG_BT_DEVICE_NAME="ZilpZalp"
-
-# Koliko uređaja pamti (i koliko konekcija)
-CONFIG_BT_MAX_CONN=1
-CONFIG_BT_MAX_PAIRED=5
-
-# --- Connection parameter preferences (stabilnije na macOS/iPadOS) ---
-# (Vrednosti su u units od 1.25ms za interval, timeout u 10ms)
-# Ove vrednosti su “umerene”: stabilno + ok latencija.
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=24
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=40
-CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+CONFIG_ZMK_KEYBOARD_NAME="ZilpZalp"
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=0
